design corrections made

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
 </head>
-<body class="bg-zinc-600">
-    <div class="h-3/4 w-3/4 mx-auto">
-<!-- I need 4 columns with small gaps between  -->
-        <main class="grid grid-cols-4 gap-2">
+<body class="bg-black">
+        <h1 class=" mx-auto flex justify-center font-bold text-yellow-300 text-center text-5xl bg-black w-300px rounded-md w-80 pt-3 pb-5 mt-5 border-4 border-orange-500 ">Jazzi's Calculator</h1>
+    <!-- I need 4 columns with small gaps between  -->
+        <main class="grid grid-cols-4 gap-2 mx-auto mt-10 w-10/12 rounded-md border-8 border-orange-500 px-5 pt-5 pb-5 bg-zinc-600 ">
 
     <!-- I need a box to display the numbers -->
     <!-- the box should stretch across columns to show no empty gaps -->
@@ -35,8 +35,7 @@
             <button class="p-5 bg-orange-500 rounded-lg border-8 border-yellow-300 font-bold text-black text-3xl" id="btnSolve">=</button>
             <button class="p-5 bg-orange-500 rounded-lg border-8 border-yellow-300 font-bold text-black text-3xl" id="btnAdd">+</button>
         </main>
-        <!-- allows clear button to work -->
+    <!-- allows clear button to work -->
         <script src="app.js"></script>
-    </div>
 </body>
 </html>
